prevents header from being cropped

--- a/common/common.scss
+++ b/common/common.scss
@@ -29,6 +29,8 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5em;
+  padding: 0.25em;
+  box-sizing: border-box;
 
   .title {
     font-weight: bold;
